fix(*) broken style sheet

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,54 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
-
-* { box-sizing: border-box; }
-
-:root {
-  --app-bg: #101827;
-  --sidebar: rgba(21, 30, 47,1);
-  --sidebar-main-color: #fff;
-  --table-border: #1a2131;
-  --table-header: #1a2131;
-  --app-content-main-color: #fff;
-  --sidebar-link: #fff;
-  --sidebar-active-link: #1d283c;
-  --sidebar-hover-link: #1a2539;
-  --action-color: #2869ff;
-  --action-color-hover: #6291fd;
-  --app-content-secondary-color: #1d283c;
-  --filter-reset: #2c394f;
-  --filter-shadow: rgba(16, 24, 39, 0.8) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-
-.light:root {
-  --app-bg: #fff;
-  --sidebar: #f3f6fd;
-  --app-content-secondary-color: #f3f6fd;
-  --app-content-main-color: #1f1c2e;
-  --sidebar-link: #1f1c2e;
-  --sidebar-hover-link: rgba(195, 207, 244, 0.5);
-  --sidebar-active-link: rgba(195, 207, 244, 1);
-  --sidebar-main-color: #1f1c2e;
-  --filter-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-
 $font-small: 14px;
 $font-medium: 16px;
 $font-large: 24px;
 
-body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-}
-
-body {
-  overflow: hidden;
-  font-family: 'Poppins', sans-serif;
-  background-color: var(--app-bg);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 .app-container {
   border-radius: 4px;
@@ -97,9 +50,13 @@ body {
         line-height: 24px;
       }
 
-      svg { margin-right: 8px; }
+      svg {
+        margin-right: 8px;
+      }
 
-      &:hover { background-color: var(--sidebar-hover-link); }
+      &:hover {
+        background-color: var(--sidebar-hover-link);
+      }
 
       &.active {
         background-color: var(--sidebar-active-link);
@@ -116,9 +73,11 @@ body {
     }
   }
 
-  @media screen and (max-width: 1024px) {&{
-    display: none;
-  }}
+  @media screen and (max-width: 1024px) {
+    & {
+      display: none;
+    }
+  }
 }
 
 .mode-switch {
@@ -242,12 +201,21 @@ body {
       margin-left: auto;
     }
 
-    @media screen and (max-width: 520px) {&{
-      flex-direction: column;
+    @media screen and (max-width: 520px) {
+      & {
+        flex-direction: column;
 
-      .search-bar { max-width: 100%; order: 2; }
-      .app-content-actions-wrapper { padding-bottom: 16px; order: 1; }
-    }}
+        .search-bar {
+          max-width: 100%;
+          order: 2;
+        }
+
+        .app-content-actions-wrapper {
+          padding-bottom: 16px;
+          order: 1;
+        }
+      }
+    }
   }
 }
 
@@ -272,9 +240,13 @@ body {
   max-width: 320px;
   transition: .2s;
 
-  .light & { @include searchIcon('1f1c2e'); }
+  .light & {
+    @include searchIcon('1f1c2e');
+  }
 
-  &:placeholder { color: var(--app-content-main-color); }
+  &:placeholder {
+    color: var(--app-content-main-color);
+  }
 
   &:hover {
     border-color: var(--action-color-hover);
@@ -300,7 +272,9 @@ body {
   margin-left: 8px;
   cursor: pointer;
 
-  span { margin-right: 4px; }
+  span {
+    margin-right: 4px;
+  }
 
   &:hover {
     border-color: var(--action-color-hover);
@@ -376,7 +350,10 @@ body {
     background-color: transparent;
     margin-bottom: 16px;
     width: 100%;
-    option { font-size: 14px; }
+
+    option {
+      font-size: 14px;
+    }
 
     .light & {
       @include arrowDown('1f1c2e');
@@ -465,24 +442,47 @@ body {
       margin-right: 6px;
     }
 
-    @media screen and (max-width: 780px) {&{
-      font-size: 12px;
-      &.image span { display: none; }
-      &.image { flex: 0.2; }
-    }}
+    @media screen and (max-width: 780px) {
+      & {
+        font-size: 12px;
 
-    @media screen and (max-width: 520px) {&{
-      &.category, &.sales {
-        display: none;
+        &.image span {
+          display: none;
+        }
+
+        &.image {
+          flex: 0.2;
+        }
       }
-      &.status-cell { flex: 0.4; }
-      &.stock, &.price { flex: 0.2; }
-    }}
+    }
 
-    @media screen and (max-width: 480px) {&{
-      &.stock { display: none; }
-      &.price { flex: 0.4; }
-    }}
+    @media screen and (max-width: 520px) {
+      & {
+        &.category, &.sales {
+          display: none;
+        }
+
+        &.status-cell {
+          flex: 0.4;
+        }
+
+        &.stock, &.price {
+          flex: 0.2;
+        }
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      & {
+        &.stock {
+          display: none;
+        }
+
+        &.price {
+          flex: 0.4;
+        }
+      }
+    }
   }
 
   .sort-button {
@@ -495,8 +495,13 @@ body {
     display: flex;
     align-items: center;
 
-    &:hover { color: var(--action-color); }
-    svg { width: 12px; }
+    &:hover {
+      color: var(--action-color);
+    }
+
+    svg {
+      width: 12px;
+    }
   }
 
   .cell-label {
@@ -543,9 +548,11 @@ body {
   flex-wrap: wrap;
   margin: 0 -8px;
 
-  @media screen and (max-width: 520px) {&{
-    margin: 0;
-  }}
+  @media screen and (max-width: 520px) {
+    & {
+      margin: 0;
+    }
+  }
 
   .products-header {
     display: none;
@@ -570,22 +577,28 @@ body {
       }
     }
 
-    @media screen and (max-width: 1024px) {&{
-      width: calc(33.3% - 16px);
-    }}
-
-    @media screen and (max-width: 820px) {&{
-      width: calc(50% - 16px);
-    }}
-
-    @media screen and (max-width: 520px) {&{
-      width: 100%;
-      margin: 8px 0;
-
-      &:hover {
-        transform: none;
+    @media screen and (max-width: 1024px) {
+      & {
+        width: calc(33.3% - 16px);
       }
-    }}
+    }
+
+    @media screen and (max-width: 820px) {
+      & {
+        width: calc(50% - 16px);
+      }
+    }
+
+    @media screen and (max-width: 520px) {
+      & {
+        width: 100%;
+        margin: 8px 0;
+
+        &:hover {
+          transform: none;
+        }
+      }
+    }
 
     .cell-more-button {
       border: none;
@@ -598,7 +611,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width:24px;
+      width: 24px;
       height: 24px;
       background-color: rgba(16, 24, 39, 0.7);
       color: #fff;
@@ -618,7 +631,7 @@ body {
       justify-content: space-between;
     }
 
-    &.image  span {
+    &.image span {
       font-size: 18px;
       line-height: 24px;
     }
@@ -632,5 +645,7 @@ body {
     }
   }
 
-  .cell-label { opacity: 0.6; }
+  .cell-label {
+    opacity: 0.6;
+  }
 }
